[tool.poetry]
name = "doge"
version = "0.1.0"
description = ""
authors = ["Vladimir Pasquier <1112241+vpasquier@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chronos = {git = "https://github.com/amazon-science/chronos-forecasting.git"}
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"